Fixing spacing and font

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 html {
     scroll-behavior: smooth;
+    font-family: "Sarabun";
+    font-size: 16px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none solid rgb(68, 68, 68);
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
 }
