--- a/src/pages/Skill/skill.css
+++ b/src/pages/Skill/skill.css
@@ -64,7 +64,8 @@ h3 {
   @media only screen and (min-width: 877px) {
     /*big screen*/
     .title {
-      font-size: 4vw;
+      font-size: 3vw;
+      margin-top: 15vh;
     }
 
     .logo {
